--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -14,29 +14,23 @@
     position: absolute
     top: 60%
     right: 5%
-
 @keyframes float1
   0%
     transform: translateY(20px)
-
   100%
     transform: translateY(0px)
-
 @keyframes float2
   0%
     transform: translateX(20px)
-
   100%
     transform: translateX(0px)
 
 .banner-principal__row .banner-principal__img
-  width: 400px
+  max-width: 400px
 
 .banner-interno__fondo
   background-image: url("../assets/curso/portada/img1.svg") !important
 
-.tarjeta.tarjeta--azul
-  background-color: white
 
 .tarjeta.tarjeta--amarilla
   background-color: #FAFCE1
@@ -142,3 +136,20 @@
   .bg-c5
     border-top-right-radius: 0px
     border-bottom-left-radius: 15px
+
+
+// 2026
+figcaption
+  font-weight: normal !important
+.fa-lista
+  li
+    display: flex !important
+    align-items: flex-start
+  li:before
+    position: relative
+    margin-right: 7px
+    font-size: 1.4rem 
+.bg1
+  background-color: #FEE9E0
+.bloque-texto-g__texto * 
+  display: block
